<resources>
    <string name="app_name">My News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_articles">No results</string>
    <string name="communication_error">Error in getting data. Please try again later.</string>
    <string name="search_edit_text">Search query term</string>

    // Category check box
    <string name="category_arts">Arts</string>
    <string name="category_business">Business</string>
    <string name="category_entrepreneurs">Entrepreneurs</string>
    <string name="category_politics">Politics</string>
    <string name="category_sports">Sports</string>
    <string name="category_travel">Travel</string>

    <string name="text_switch_button">Enable notifications (once per day)</string>
    <string name="search_button">SEARCH</string>
    <string name="begin_date">Begin date</string>
    <string name="end_date">End date</string>
</resources>
