<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/categories"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBox_politics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/lightBlueColor"
            android:padding="7dp"
            android:text="@string/category_politics"
            android:textStyle="normal" />

        <CheckBox
            android:id="@+id/checkBox_sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/lightBlueColor"
            android:padding="7dp"
            android:text="@string/category_sports"
            android:textStyle="normal" />

        <CheckBox
            android:id="@+id/checkBox_travel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/lightBlueColor"
            android:padding="7dp"
            android:text="@string/category_travel"
            android:textStyle="normal" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">


        <CheckBox
            android:id="@+id/checkBox_business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:buttonTint="@color/lightBlueColor"
            android:padding="7dp"
            android:text="@string/category_business"
            android:textStyle="normal" />

        <CheckBox
            android:id="@+id/checkBox_arts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:buttonTint="@color/lightBlueColor"
            android:padding="7dp"
            android:text="@string/category_arts"
            android:textStyle="normal" />

        <CheckBox
            android:id="@+id/checkBox_entrepreneurs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:buttonTint="@color/lightBlueColor"
            android:padding="7dp"
            android:text="@string/category_entrepreneurs"
            android:textStyle="normal" />

    </LinearLayout>
</LinearLayout>